<resources>
    <string name="app_name">FantasyNPC</string>

    <string name="placeholder">This is placeholder text.</string>

    <string name="speed_title">Speed: </string>
    <string name="languages_title">Languages: </string>
    <string name="traits_title">Traits: </string>

    <string name="choose_race">Choose Race</string>
    <string name="choose_sex">Choose Sex</string>
    <string name="sex_female">Female</string>
    <string name="sex_male">Male</string>

    <string name="random">Random</string>
    <string name="generate_character">Generate NPC</string>

    <string-array name="races_array">
        <item>Random</item>
        <item>Dragonborn</item>
        <item>Hill Dwarf</item>
        <item>Mountain Dwarf</item>
        <item>Dark Elf</item>
        <item>High Elf</item>
        <item>Wood Elf</item>
        <item>Forest Gnome</item>
        <item>Rock Gnome</item>
        <item>Half-Elf</item>
        <item>Lightfoot Halfling</item>
        <item>Stout Halfling</item>
        <item>Half-Orc</item>
        <item>Human</item>
        <item>Tiefling</item>
    </string-array>
</resources>
